<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_btn"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:srcCompat="@drawable/ic_back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/title_Headtracking"
        android:textColor="@color/solid_white_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="@font/inter_extrabold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/sub_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:text="@string/label_headtrack_desc"
        android:textColor="@color/solid_white_color"
        android:textSize="14sp"
        android:textStyle="normal"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/back_btn"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/face_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/play_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sub_title"
        app:srcCompat="@drawable/image_face_color" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/play_icon"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginBottom="14dp"
        android:background="@drawable/ic_ellipse"
        android:paddingLeft="3dp"
        android:paddingTop="7dp"
        android:paddingBottom="7dp"
        app:layout_constraintBottom_toTopOf="@+id/play_info"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_play" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/play_info"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/label_click_play"
        android:textColor="@color/solid_white_color"
        android:textSize="14sp"
        app:fontFamily="@font/roboto_regular"
        app:layout_constraintBottom_toTopOf="@+id/btn_learn_more"
        app:layout_constraintEnd_toEndOf="@+id/sub_title"
        app:layout_constraintStart_toStartOf="@+id/sub_title" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_learn_more"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="82dp"
        android:minWidth="190dp"
        android:paddingStart="62dp"
        android:paddingTop="16dp"
        android:paddingEnd="62dp"
        android:paddingBottom="16dp"
        android:text="@string/btn_lear_more"
        app:backgroundTint="@color/solid_color"
        app:cornerRadius="28dp"
        app:elevation="2dp"
        app:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:textAllCaps="false" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/btn_skip"
        android:textColor="@color/gray_color"
        app:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>