<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121212">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/back_btn"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="17dp"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/title"
        app:srcCompat="@drawable/ic_back" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/btn_calibrate"
        android:textColor="@color/solid_white_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="@font/inter_extrabold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ic_calibration_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/btn_calibrate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:srcCompat="@drawable/ic_turn_left" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/calibration_mode_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/label_turn_left"
        android:textColor="@color/solid_white_color"
        android:textSize="18sp"
        android:textStyle="bold"
        app:fontFamily="@font/montserrat_medium"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ic_calibration_mode" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_calibrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="30dp"
        android:minWidth="190dp"
        android:paddingStart="62dp"
        android:paddingTop="16dp"
        android:paddingEnd="62dp"
        android:paddingBottom="16dp"
        android:text="@string/btn_next"
        app:backgroundTint="@color/calibrate_bg_color"
        app:cornerRadius="28dp"
        app:elevation="2dp"
        app:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toTopOf="@+id/btn_skip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:textAllCaps="false" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/btn_skip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="35dp"
        android:text="@string/btn_skip"
        android:textColor="@color/gray_color"
        app:fontFamily="@font/montserrat_semibold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>